# CAP

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: copilot-python.Dockerfile
docs/: 01-product-requirements.md  02-system-architecture.md  03-workspace-sandbox.md  04-memory-management.md  05-model-provider-routing.md  06-security-permissions.md  07-api-and-data-model.md  08-development-roadmap.md  09-openai-agents-reading-notes.md  10-implementation-blueprint.md  11-phase-one-local-cli.md  12-model-provider-env-design.md  13-phase-two-backend-foundation.md  14-phase-two-api-layer.md  15-phase-two-run-worker.md  16-phase-two-run-events.md  17-phase-two-async-worker.md  18-phase-two-sandbox-runtime.md  19-phase-two-api-ai-run.md  20-phase-two-web-ui-sandbox-backends.md  21-phase-three-sandbox-backend-protocol.md  22-phase-three-docker-sandbox-backend.md  23-memory-v2-claude-code-inspired.md  24-phase-four-tool-policy-approvals.md  25-phase-four-observability-cost.md  26-phase-four-ci-model-matrix.md  README.md
examples/sample_repo/: pyproject.toml
scripts/: smoke_docker_backend.py
src/copilot_agent/: __init__.py  cli.py  env.py  memory.py  model_config.py  model_registry.py  phase_one.py  runs.py  (+1 more)
tests/: test_api_app.py  test_api_runtime.py  test_backend_policy.py  test_backend_service.py  test_backend_store.py  test_background_worker.py  test_docker_smoke.py  test_env.py  test_memory.py  test_model_config.py  test_model_registry.py  test_phase_one.py  test_run_worker.py  test_runs.py  test_sandbox_backend.py
(+17 files in other folders)
