[project]
name = "copilot-agent-platform"
version = "0.1.0"
description = "Phase-one Copilot platform prototype built on openai-agents-python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.17.3,<0.18",
]

[project.scripts]
copilot-agent = "copilot_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

