[project]
name = "copilot-agent-platform"
version = "0.1.0"
description = "Phase-one Copilot platform prototype built on openai-agents-python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.17.3,<0.18",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6",
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
copilot-agent = "copilot_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
branch = true
source = ["copilot_agent"]
omit = [
    "src/copilot_agent/__main__.py",
    "src/copilot_agent/cli.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
